Update Jsoniter version to clean up ApiTextAction